--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prettier": "prettier src"
+    "prettier": "prettier src",
+    "gh-pages": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app",
@@ -45,6 +46,8 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "prettier": "^2.0.5"
-  }
+  },
+  "homepage": "."
 }
